# DB2-lab1

./: .gitignore  README.md  datos1.txt  docker-compose.yml  dockerfile
data/: datos12.txt  p1.cpp  p4test  testp2
volume/: CMakeLists.txt  makefile
volume/src/: main  main.cpp  p1.cpp  p2.cpp  p3.cpp  p4.cpp  p4test
